Make sure that on mobile video doesnt scale

--- a/src/styles/VideoCard.scss
+++ b/src/styles/VideoCard.scss
@@ -13,8 +13,10 @@
     width: 30%;
   }
 
-  &:hover {
-    transform: scale(1.09);
+  @media screen and (min-width: 768px) {
+    &:hover {
+        transform: scale(1.09);
+      }
   }
 
   &__stats {
